Update all chef role to use php56

--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -14,9 +14,8 @@
     "recipe[glusterfs]",
     "recipe[nginx]",
     "recipe[microcache]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php56]",
+    "recipe[php56-fpm]",
     "recipe[composer]",
     "recipe[diskmount]",
     "recipe[deploycode]"
