--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -12,9 +12,8 @@
     "recipe[build-essential]",
     "recipe[basicservice]",
     "recipe[nginx]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php56]",
+    "recipe[php56-fpm]",
     "recipe[composer]",
     "recipe[deploycode]"
   ],
