--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -13,9 +13,8 @@
     "recipe[basicservice]",
     "recipe[glusterfs]",
     "recipe[nginx]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php56]",
+    "recipe[php56-fpm]",
     "recipe[composer]",
     "recipe[diskmount]",
     "recipe[deploycode]"
