Change all role to use php56

--- a/resources/chef/roles/chefclient-nginx-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-microcache.json
@@ -13,9 +13,8 @@
     "recipe[basicservice]",
     "recipe[updatevault]",
     "recipe[nginx]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php56]",
+    "recipe[php56-fpm]",
     "recipe[microcache]",
     "recipe[composer]",
     "recipe[deploycode]"
