--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -15,9 +15,8 @@
     "recipe[updatevault]",
     "recipe[nginx]",
     "recipe[microcache]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php56]",
+    "recipe[php56-fpm]",
     "recipe[composer]",
     "recipe[diskmount]",
     "recipe[deploycode]"
