--- a/resources/chef/cookbooks/php56-fpm/templates/default/www.conf
+++ b/resources/chef/cookbooks/php56-fpm/templates/default/www.conf
@@ -29,17 +29,17 @@ listen.allowed_clients = 127.0.0.1
 ; BSD-derived systems allow connections regardless of permissions. 
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = ec2-user
-listen.group = ec2-user
+listen.owner = nginx
+listen.group = nginx
 listen.mode = 0660
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = ec2-user
+user = nginx
 ; RPM: Keep a group allowed to write in log dir.
-group = ec2-user
+group = nginx
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
@@ -143,7 +143,7 @@ pm.max_requests = 500
 ; does not stop script execution for some reason. A value of '0' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-request_terminate_timeout = 300 
+request_terminate_timeout = 40 
  
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
