--- a/resources/chef/cookbooks/php56-fpm/templates/default/www.conf
+++ b/resources/chef/cookbooks/php56-fpm/templates/default/www.conf
@@ -29,17 +29,17 @@ listen.allowed_clients = 127.0.0.1
 ; BSD-derived systems allow connections regardless of permissions. 
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = nginx
-listen.group = nginx
+listen.owner = ec2-user
+listen.group = ec2-user
 listen.mode = 0660
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = nginx
+user = ec2-user
 ; RPM: Keep a group allowed to write in log dir.
-group = nginx
+group = ec2-user
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
