chefClients.template edited online with Bitbucket

--- a/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -186,10 +186,10 @@
                 "Arch": "PVinstancestore"
             },
             "m4.large": {
-                "Arch": "PVinstancestore"
+                "Arch": "HVMebs"
             },
             "m4.xlarge": {
-                "Arch": "PVinstancestore"
+                "Arch": "HVMebs"
             },
             "m3.2xlarge": {
                 "Arch": "PVinstancestore"
