chefClients.template edited online with Bitbucket

--- a/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -754,11 +754,10 @@
                         "Fn::Join": [
                             "",
                             [
-                                "HTTP:",
+                                "TCP:",
                                 {
                                     "Ref": "InstancePort"
-                                },
-                                "/ping.html"
+                                }
                             ]
                         ]
                     },
