Changing kylin version and fix syntax error, updating chef client role to use kylin cluster node role

--- a/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/resources/chef/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -620,6 +620,7 @@
                         ]
                     }
                 ],
+                "IamInstanceProfile" : "EMR_EC2_DefaultRole",
                 "ImageId": {
                     "Fn::FindInMap": [
                         "AWSRegionArch2AMI",
