--- a/resources/chef/cookbooks/drupalsetting/templates/default/mq.zkf.cfg
+++ b/resources/chef/cookbooks/drupalsetting/templates/default/mq.zkf.cfg
@@ -1,6 +1,6 @@
-{config,"http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:8086/api/updateOrder.html?type=0&",
-        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:8086/api/applyEditOrder.html?type=0&",
-        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:8086/api/updateOrder.html?type=0&",
-        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:8086/sysApi/appAuthenticate.html?","MQSERVER",
-        "MQSERVER123456",<<"michael">>,<<"111111">>,"127.0.0.1",5672,
+{config,"http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:9086/oc_system3/api/updateOrder.html?type=0&",
+        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:9086/oc_system3/api/applyEditOrder.html?type=0&",
+        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:9086/oc_system3/api/updateOrder.html?type=0&",
+        "http://sparkpadg-elasticl-2t187adkjku3-926650160.cn-north-1.elb.amazonaws.com.cn:9086/oc_system3/sysApi/appAuthenticate.html?","MQSERVER",
+        "MQSERVER123456",<<"michael">>,<<"111111">>,"sparkpadgp_oc",5672,
         false,1,1}.
