update drupalsetting to support kinds of settings as loop

--- a/resources/chef/cookbooks/webserver/templates/default/proxy.conf
+++ b/resources/chef/cookbooks/webserver/templates/default/proxy.conf
@@ -21,7 +21,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
-                proxy_pass            http://<%= @host %><%= @port %>;
+                proxy_pass            http://<%= @host %><%= @portstring %>;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -48,7 +48,7 @@ server {
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
                 send_timeout                300;
-                proxy_pass            http://<%= @host %><%= @port %>;
+                proxy_pass            http://<%= @host %><%= @portstring %>;
         }
 }
 
