--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 ###
 # Ignore Chef key files and secrets
 ###
-.chef/*.pem
-.chef/encrypted_data_bag_secret
+.chef/*
 
 # Ignore all user data
 ./json_output/*
