Updating drupalsetting cookbook

--- a/cookbooks/drupalsetting/templates/default/reportingsys.env
+++ b/cookbooks/drupalsetting/templates/default/reportingsys.env
@@ -2,10 +2,10 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=3TTN5JUf8uLcC3ZxIrszuO9isduc3IKO
 
-DB_HOST=<%= @host %>
+DB_HOST=sm12g5l9d32eyun.cjwa2zciaejp.rds.cn-north-1.amazonaws.com.cn
 DB_DATABASE=laravel
-DB_USERNAME=<%= @username %>
-DB_PASSWORD=<%= @password %>
+DB_USERNAME=keithyau
+DB_PASSWORD=thomas123
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -19,7 +19,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 
-DB_HOST_CENTER=<%= @host %>
+DB_HOST_CENTER=sm12g5l9d32eyun.cjwa2zciaejp.rds.cn-north-1.amazonaws.com.cn
 DB_DATABASE_CENTER=syncedoc
-DB_USERNAME_CENTER=<%= @username %>
-DB_PASSWORD_CENTER=<%= @password %>
+DB_USERNAME_CENTER=keithyau
+DB_PASSWORD_CENTER=thomas123
