Adding piping of logs into cfn-init.log

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -574,7 +574,7 @@
                                             {
                                                 "Ref": "RoleName"
                                             },
-                                            "]'"
+                                            "]' >> /var/log/cfn-init.logs"
                                         ]
                                     ]
                                 },
