Updating proxy cookbook

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -12,7 +12,7 @@ server {
         # ssl_session_timeout 5m;
         ## END SSL ##
 
-        server_name <%= @prefix %>.<%= @domain %>;
+        server_name <%= @domain %>;
         location /request_uri {
                 #$request_uri;
                 add_header Content-Type text/plain;
