--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -2,6 +2,16 @@
 
 #proxy_cache_path /data/cache/html levels=1:2 keys_zone=cachehtml:20m max_size=1g;
 #proxy_cache_path /data/cache/image levels=1:2 keys_zone=cacheimage:20m max_size=1g;
+
+<% if @domain.include? "www" %>
+<% DOMAIN = @domain.chomp.split(' ') [1]
+<%= "server {" %>
+<%= "        listen 80;
+<%= "        server_name www.#{DOMAIN};"
+<%= "        return 301 $scheme://#{DOMAIN}$request_uri;"
+<%="}"%>
+<%=""%>
+<% end %>
 server {
         listen 80;
         ## For SSL.
