Update proxy template

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -7,7 +7,7 @@
 <% DOMAIN = @domain.chomp.split(' ') [1] %>
 <%= "server {" %>
 <%= "        listen 80; %>
-<%= "        server_name www."DOMAIN";" %>
+<%= "        server_name www."%><%= DOMAIN %><%= ";" %>
 <%= "        return 301 $scheme://"DOMAIN"$request_uri;" %>
 <%="}"%>
 <%=""%>
