--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -31,7 +31,8 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
-                proxy_pass            http://<%= @host %>;
+                set $target           http://<%= @host %>;
+                proxy_pass            $target;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -58,7 +59,8 @@ server {
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
                 send_timeout                300;
-                proxy_pass            http://<%= @host %>;
+                set $target           http://<%= @host %>;
+                proxy_pass            $target;
         }
 }
 
