--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -32,7 +32,7 @@ server {
                 proxy_redirect off;
                 proxy_buffering off;
                 set $target           http://<%= @host %>;
-                proxy_pass            $target;
+                proxy_pass            http://$target;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -60,7 +60,7 @@ server {
                 proxy_read_timeout          300;
                 send_timeout                300;
                 set $target           http://<%= @host %>;
-                proxy_pass            $target;
+                proxy_pass            http://$target;
         }
 }
 
