Fixing syntax error

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -31,7 +31,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
-                set $target           http://<%= @host %>:<%= proxyport%>;
+                set $target           http://<%= @host %>:<%= @proxyport%>;
                 proxy_pass            http://$target;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
@@ -59,7 +59,7 @@ server {
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
                 send_timeout                300;
-                set $target           http://<%= @host %>:<%= proxyport%>;
+                set $target           http://<%= @host %>:<%= @proxyport%>;
                 proxy_pass            http://$target;
         }
 }
