Updating resolver in proxy_pass

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -31,6 +31,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
+                resolver 127.0.0.1;
                 set $target           http://<%= @host %>:<%= @proxyport%>;
                 proxy_pass            http://$target;
                 # proxy_cache            cachehtml;
@@ -59,6 +60,7 @@ server {
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
                 send_timeout                300;
+                resolver 127.0.0.1;
                 set $target           http://<%= @host %>:<%= @proxyport%>;
                 proxy_pass            http://$target;
         }
