Fixing naming conflict in proxy.conf

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -3,7 +3,7 @@
 #proxy_cache_path /data/cache/html levels=1:2 keys_zone=cachehtml:20m max_size=1g;
 #proxy_cache_path /data/cache/image levels=1:2 keys_zone=cacheimage:20m max_size=1g;
 
-upstream <%= @host %>{
+upstream <%= @host %>_upstream{
         server <%= @host %>:<%= @proxyport%>;
 }
 
@@ -37,7 +37,7 @@ server {
                 proxy_buffering off;
                 resolver 127.0.0.1;
                 #set $target           http://<%= @host %>:<%= @proxyport%>;
-                proxy_pass            http://<%= @host %>;
+                proxy_pass            http://<%= @host %>_upstream;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -66,7 +66,7 @@ server {
                 send_timeout                300;
                 resolver 127.0.0.1;
                 #set $target           http://<%= @host %>:<%= @proxyport%>;
-                proxy_pass            http://<%= @host %>;
+                proxy_pass            http://<%= @host %>_upstream;
         }
 }
 
