Removing port if port is 80

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -32,7 +32,7 @@ server {
                 proxy_redirect off;
                 proxy_buffering off;
                 resolver 127.0.0.1;
-                set $target           http://<%= @host %>:<%= @proxyport%>;
+                set $target           http://<%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
                 proxy_pass            http://$target;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
@@ -61,7 +61,7 @@ server {
                 proxy_read_timeout          300;
                 send_timeout                300;
                 resolver 127.0.0.1;
-                set $target           http://<%= @host %>:<%= @proxyport%>;
+                set $target           http://<%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
                 proxy_pass            http://$target;
         }
 }
