--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -3,6 +3,9 @@
 #proxy_cache_path /data/cache/html levels=1:2 keys_zone=cachehtml:20m max_size=1g;
 #proxy_cache_path /data/cache/image levels=1:2 keys_zone=cacheimage:20m max_size=1g;
 
+upstream <%= @host %>_upstream {
+        server <%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
+}
 <% if @domain.include? "www" %>
 <% DOMAIN = @domain.chomp.split(" ")[1] %>
 <%= "server {" %>
@@ -31,9 +34,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
-                resolver 127.0.0.1;
-                set $target           http://<%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
-                proxy_pass            http://$target;
+                proxy_pass            http://<%= @host %>_upstream;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -61,8 +62,7 @@ server {
                 proxy_read_timeout          300;
                 send_timeout                300;
                 resolver 127.0.0.1;
-                set $target           http://<%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
-                proxy_pass            http://$target;
+                proxy_pass            http://<%= @host %>_upstream;
         }
 }
 
