--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -17,6 +17,7 @@ upstream <%= @host %>_upstream {
 <% end %>
 server {
         listen 80;
+        listen <% if ! @proxyport.eql?("80")%><%= @proxyport%><% end %>;
         ## For SSL.
         # listen 443 ssl;
         # ssl    on;
