Updating haproxy config to remove ownership of haproxy

--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -2,8 +2,6 @@ global
     log /dev/log    local0
     log /dev/log    local1 notice
     maxconn 1024
-    user  haproxy
-    group haproxy
     daemon
     nbproc 1
     pidfile /var/run/haproxy.pid
@@ -38,7 +36,7 @@ listen stats :8080
     stats realm Haproxy\ Statistics
     stats uri /
     # 帳號密碼
-    stats auth your_username:your_password
+    stats auth admin:Spark123!
     stats refresh 10s
 
 # 設定 Web Cluster
