Updating haproxy config

--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -29,7 +29,8 @@ frontend switch
     default_backend web_server_cluster
 
 # HAProxy 監控儀表板
-listen stats :8080
+listen stats
+    bind 0.0.0.0:8080
     mode http
     stats enable
     stats hide-version
