--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -12,6 +12,10 @@ defaults
     mode    http
     option  httplog
     option  dontlognull
+
+    # never fail on address resolution
+    default-server init-addr last,libc,none
+
     # 以下幾個 Timeout 設定要跟後端的 PHP 配合調整
     timeout server 30s
     timeout connect 30s
