--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -29,7 +29,7 @@ frontend switch
     mode http
     option httpclose
     option forwardfor
-    reqadd X-Forwarded-Proto:\ https
+    #reqadd X-Forwarded-Proto:\ https
     default_backend web_server_cluster
 
 # HAProxy 監控儀表板
