Update haproxy config

--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -51,4 +51,4 @@ backend web_server_cluster
     cookie SERVERID insert indirect nocache
     # Web Server Cluster
     server druapp01 druapp01.zkf.vpn:8888 check cookie s1
-    server web2 192.168.1.11:80 check cookie s2
+    #server druapp02 druapp02.zkf.vpn:8888 check cookie s2
