Updating haproxy log file to be stdout

--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -1,6 +1,6 @@
 global
-    log /dev/log    local0
-    log /dev/log    local1 notice
+    log /dev/stdout    local0
+    log /dev/stdout    local1 notice
     maxconn 1024
     daemon
     nbproc 1
