--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -14,7 +14,7 @@ defaults
     option  dontlognull
 
     # never fail on address resolution
-    default-server init-addr last,libc,none
+    #default-server init-addr last,libc,none
 
     # 以下幾個 Timeout 設定要跟後端的 PHP 配合調整
     timeout server 30s
@@ -27,8 +27,8 @@ defaults
 frontend switch
     bind *:80
     mode http
-    option httpclose
-    option forwardfor
+    #option httpclose
+    #option forwardfor
     #reqadd X-Forwarded-Proto:\ https
     default_backend web_server_cluster
 
