--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -48,6 +48,7 @@ listen stats
 backend web_server_cluster
     mode http
     balance roundrobin
+    option httpack GET /
     cookie SERVERID insert indirect nocache
     # Web Server Cluster
     server druapp01 druapp01.zkf.vpn:8888 check cookie s1
