Replacign haproxy by nginx load balancer

--- a/cookbooks/configs/templates/default/haproxy.cfg
+++ b/cookbooks/configs/templates/default/haproxy.cfg
@@ -43,7 +43,7 @@ backend web_server_cluster
     #option httpack GET /
     #cookie SERVERID insert indirect nocache
     # Web Server Cluster
-    server druapp01 druapp01.zkf.vpn:8888 check cookie
+    server druapp01 ttdruapp01.zkf.vpn:8888 check cookie
     # cookie s1
     #server druapp02 druapp02.zkf.vpn:8888 check cookie s2
 
