--- a/cookbooks/configs/templates/default/loadbalancer.conf
+++ b/cookbooks/configs/templates/default/loadbalancer.conf
@@ -7,9 +7,13 @@ server {
     listen 80;
 
     location / {
+        proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header                HTTP_Country-Code $geoip_country_code;
+        # proxy_set_header        Cookie $http_cookie;
+        proxy_pass_request_headers      on;
         proxy_pass http://myapp1;
     }
 }
