--- a/cookbooks/configs/templates/default/loadbalancer-test.conf
+++ b/cookbooks/configs/templates/default/loadbalancer-test.conf
@@ -7,12 +7,13 @@ server {
     listen 80;
 
     location /de {
+      rewrite ^\/de\/(.*)$ $1 break;
       proxy_pass       http://main;
       proxy_set_header Host            de.zkungfu.com;
-      proxy_set_header X-Forwarded-Host de.zkungfu.com;
-      proxy_set_header X-Forwarded-Server de.zkungfu.com;
-      proxy_set_header X-Forwarded-For $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      # proxy_set_header X-Forwarded-Host de.zkungfu.com;
+      # proxy_set_header X-Forwarded-Server de.zkungfu.com;
+      # proxy_set_header X-Forwarded-For $remote_addr;
+      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_pass_request_headers      on;
     }
 
