--- a/cookbooks/configs/templates/default/loadbalancer-test.conf
+++ b/cookbooks/configs/templates/default/loadbalancer-test.conf
@@ -10,7 +10,7 @@ server {
       rewrite ^\/de\/(.*)$ $1 break;
       proxy_pass       http://main;
       proxy_set_header Host            de.zkungfu.com;
-      # proxy_set_header X-Forwarded-Host de.zkungfu.com;
+      proxy_set_header X-Forwarded-Host de.zkungfu.com;
       # proxy_set_header X-Forwarded-Server de.zkungfu.com;
       # proxy_set_header X-Forwarded-For $remote_addr;
       # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
